log
Thu 04 May 2023 12:04:33 AM UTC: 
 tests:  0|5
total_score: 0/70
6fbb703
Thu 04 May 2023 12:13:41 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
26582de
Thu 04 May 2023 12:14:35 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5dc843f
Thu 04 May 2023 12:15:15 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
2539645
Thu 04 May 2023 09:45:51 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 41 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
64cab44
Thu 04 May 2023 10:05:16 PM UTC: 
 sudoku.c | 56 ++++++++++++++++++++++++++------------------------------
 1 file changed, 26 insertions(+), 30 deletions(-)
 tests:  2|4
total_score: 15/70
13cb7fc
Thu 04 May 2023 10:05:26 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
fe8c87b
Fri 05 May 2023 05:34:03 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc59c45
